test/Fail/Issue3276.err
Issue3276.agda:15.30-32: error: [UnequalTerms]
The terms
  n
and
  zero
are not equal at type Nat
when checking that the expression xs has type Vec A 0
